--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>minjunkun</title>
+  <title>俺の</title>
 </head>
 <body>
-  <h1>야호!</h1>
-  <p>지금은 테스트 중이야.</p>
+  <p style="margin-left: 10px;">성인 여성 일상 + 1차 사담</p>
+  <p style="margin-left: 10px;">자캐커뮤, 우마무스메 위주 3D + 남돌 가끔</p>
 </body>
 </html>
