--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>俺の</title>
+  <title>2013</title>
 </head>
 <body>
-  <p style="margin-left: 10px;">성인 여성 일상 + 1차 사담</p>
-  <p style="margin-left: 10px;">자캐커뮤, 우마무스메 위주 3D + 남돌 가끔</p>
+  <p><br></p>
+  <p style="margin-left: 40px; font-size: 14px; line-height: 1.4;">성인 여성 일상 + 1차 사담<br>자캐커뮤, 우마무스메 위주 3D + 남돌 가끔<br><br>팔로워 수 적은 걸 선호합니다 블블악의 X<br>친해도 오래 미접이면 정리함<br>재팔로우 당연히 OK입니다~</p>
+  <a href="https://docs.google.com/spreadsheets/d/10lp8sVXzEli5s_WO9sVg9PSJOU1NUj4De0m2v4xZ4Bg/edit?usp=drivesdk"><p style="color: red; margin-left: 40px; font-size: 14px; line-height: 1.4;"><u>2차 장르 및 CP 성향 링크</u></p></a>
+
 </body>
 </html>
+
+
